added htlm header and some scss

--- a/home.html
+++ b/home.html
@@ -12,6 +12,31 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+
+    <header>
+        <div>
+            <img class="logo" src="image/Logo.svg" alt="">
+        </div>
+
+        <div id="menu" class="hide">
+            <nav>
+                <a class="_link" href="#">HOME</a>
+                <a class="_link" href="#">PRODUCTS</a>
+                <a class="_link" href="#">CONTACT</a>
+            </nav>
+            <nav>
+                <a class="_link" href="#"><i class="fa-regular fa-search"></i></a>
+                <a class="_link" href="#">Login</a>
+                <a class="_link" href="#"><i class="fa-soild fa-cart-shopping"></i></a>
+            </nav>
+        </div>
+
+        <div class="_toggle">
+            <button class="_toggle-bar"></button>
+        </div>
+
+
+    </header>
     
 </body>
 </html>
